--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -1620,17 +1620,21 @@ output {
 .multiselect-control {
 	position: relative;
 	vertical-align: top;
-	display: inline-block;
+	// display: inline-block;
 	white-space: nowrap;
+	display: flex;
+
 }
 
 .multiselect {
 	@extend %form-input-style;
 	@extend .multiselect-button;
-	position: relative;
 	margin-right: 3px;
 	min-height: 24px;
 	white-space: normal;
+
+	display: flex;
+	flex-direction: column;
 
 	&.active {
 		border-color: $form-border-focus-color;
@@ -1725,20 +1729,8 @@ output {
 	}
 }
 
-.multiselect-collapsed {
-	&.multiselect-control,
-	.multiselect {
-		overflow: hidden;
-		max-height: 24px;
-
-		input[type="text"] {
-			display: none;
-		}
-	}
-}
-
 .multiselect-button {
-	display: inline-block;
+	// display: inline-block;
 	vertical-align: top;
 }
 
@@ -6637,8 +6629,14 @@ svg {
 	}
 
 	.list-accordion-item-closed {
-		@extend .multiselect-collapsed;
-		height: 30px;
+		.multiselect {
+			height: 24px;
+			overflow: hidden;
+		}
+
+		.list-accordion-item-head {
+			margin-bottom: 5px;
+		}
 
 		.list-accordion-item-body {
 			display: none;
